# tripleA-bot

./: .gitignore  Cargo.toml  diesel.toml  history.txt  notes.txt
db/: .env  docker-compose.yml
db2/: docker-compose.yaml
migrations/2023-04-25-025156_init-db/: down.sql  up.sql
src/: client.rs  main.rs
src/client/: commands.rs  database.rs  textgen.rs
src/client/commands/: errors.rs  general.rs  owner.rs  utils.rs
src/client/database/: entities.rs  errors.rs  interface.rs  models.rs  schema.rs  tests.rs
src/client/textgen/: markov.rs  textprocessing.rs
