[package]
name = "tripleA-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.4", features = ["postgres"] }
diesel-async = { version = "0.2.2", features = ["postgres"] }
dotenv = "0.15.0"
futures = "0.3.25"
itertools = "0.10.5"
lazy_static = "1.4.0"
once_cell = "1.17.0"
poise = "0.5.2"
rand = "0.8.5"
regex = "1.7.0"
serde = "1.0.152"
serde_json = "1.0.91"
serenity = { version = "0.11.5", features = [ "framework" ] }
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "postgres", "bigdecimal"] }
tokio = { version = "1.27.0", features = ["tokio-macros", "macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = [ "async-await" ] }
